<resources>
    <string name="app_name">CodeValley</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_user_drawer">UserDrawerActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="dashboard">Dashboard</string>
    <string name="profile">Profile</string>
    <string name="about">About</string>
    <string name="challenges">Challenges</string>
    <string name="my_challenges">My Challenges</string>
    <string name="register_new_account">Register New Account</string>
    <string name="email">Email</string>
    <string name="login">Login</string>
    <string name="Register">Register</string>
    <string name="Challenge">Challenges focus on algorithms and data structures found in coding interviews.</string>
    <string name="Anki">120+ continually updated,interactive,and testdriven coding challenges,with Anki flashcards.</string>
    <string name="ChlgSltn">Each Challenge has one or more reference solutions that are:</string>
    <string name="fully_functional">Fully Functional</string>
    <string name="unit_tested">Unit Tested</string>
</resources>